welcome.lessons.welcome.loopwhile.BaggleSeeker.scala.error
BaggleSeeker:2: error: '(' expected but identifier found.
while !(estSurBiscuit())
      ^